# actix_schedule_app

./: .env  Cargo.toml
migrations/2020-08-06-015048_store_details/: down.sql  up.sql
migrations/2020-08-25-190328_create_staff/: down.sql  up.sql
migrations/2020-08-28-222901_create_staff_hours/: down.sql  up.sql
migrations/2020-08-30-205048_store_details/: up.sql
migrations/2020-09-05-162236_create_service/: down.sql  up.sql
migrations/2020-09-06-140816_create_service_staff/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/appointment/: routes.rs
src/service/: mod.rs  model.rs  routes.rs
src/staff/: model.rs  routes.rs
src/store/: model.rs  routes.rs
